--- a/cross-platform/libkeymagic/vs/libkeymagic.vcxproj.filters
+++ b/cross-platform/libkeymagic/vs/libkeymagic.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\Util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\KeyMagicTypes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\KeyCodes.h">
