not using growl for now

--- a/OSX/IMKBased/KeyMagic-TSM-Info.plist
+++ b/OSX/IMKBased/KeyMagic-TSM-Info.plist
@@ -17,6 +17,6 @@
 	<key>CFBundleVersion</key>
 	<string>1.5</string>
 	<key>tsInputMethodIconFileKey</key>
-	<string>KeyMagic_black.icns</string>
+	<string>KeyMagic.icns</string>
 </dict>
 </plist>
