use OSX notification center

--- a/cross-platform/libkeymagic/libKeyMagicTarget.xcconfig
+++ b/cross-platform/libkeymagic/libKeyMagicTarget.xcconfig
@@ -1,4 +1,4 @@
-PRODUCT_NAME = 	liblibKeyMagic;
+PRODUCT_NAME = 	libKeyMagic;
 MACH_O_TYPE = mh_dylib;
 DYLIB_COMPATIBILITY_VERSION = 1;
 DYLIB_CURRENT_VERSION = 1;
