--- a/OSX/IMKBased/KeyMagicServer-Info.plist
+++ b/OSX/IMKBased/KeyMagicServer-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>tsInputMethodCharacterRepertoireKey</key>
+	<array>
+		<string>my-MM</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
