--- a/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj.filters
+++ b/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="KeyboardManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Tasker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -117,6 +120,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="KeyboardManger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Tasker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
