[osx] add TISIntendedLanguage as mul

--- a/OSX/IMKBased/KeyMagic-Info.plist
+++ b/OSX/IMKBased/KeyMagic-Info.plist
@@ -34,6 +34,8 @@
 	<string>org.keymagic.inputmethod.KeyMagic</string>
 	<key>tsInputMethodIconFileKey</key>
 	<string>KeyMagic.icns</string>
+	<key>TISIntendedLanguage</key>
+	<string>mul</string>
 	<key>LSBackgroundOnly</key>
 	<true/>
 </dict>
