checking vesion from s3

--- a/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj
+++ b/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj
@@ -180,6 +180,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Tasker.h" />
+    <ClInclude Include="version.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\cross-platform\libkeymagic\KeyCodes.cpp">
