--- a/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj.filters
+++ b/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="ConfigUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
