--- a/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj.filters
+++ b/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj.filters
@@ -87,6 +87,12 @@
     <ClInclude Include="version.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HudWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -138,6 +144,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ConfigUtils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HudWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
