--- a/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj
+++ b/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="HudWindow.h" />
     <ClInclude Include="KeyboardManager.h" />
     <ClInclude Include="KeyMagic2.h" />
+    <ClInclude Include="NotifyIcon.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -252,6 +253,7 @@
     <ClCompile Include="HudWindow.cpp" />
     <ClCompile Include="KeyboardManger.cpp" />
     <ClCompile Include="KeyMagic2.cpp" />
+    <ClCompile Include="NotifyIcon.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
