--- a/.gitignore
+++ b/.gitignore
@@ -91,5 +91,6 @@ windows/KeyMagic2/Release
 windows/KeyMagic2/MagicAssit/Release
 windows/KeyMagic2/KeyMagic2/Debug
 windows/KeyMagic2/Debug
-OSX/package
 windows/inno/KeyMagic2
+OSX/package/KeyMagic.app
+*.pkg
